# llm_engineering

deployment/: jpy_shutdown.sh
week2/: day5.ipynb  week2 EXERCISE.ipynb
week4/: day3.ipynb  week4-exercise.ipynb
week4/translate/: README.md
week4/translate/clients/: __init__.py  gpt.py
week4/translate/tests/: test_openai_client.py
week4/translation/: README.md  pyproject.toml  tox.ini
week4/translation/tests/clients/: test_openai_client.py
week4/translation/translate/: error.py
week4/translation/translate/clients/: gpt.py
week5/: day5-exercise.ipynb
week5/alan-knowledge-base/about/: about.md
week5/alan-knowledge-base/career-history/: resume.md
week5/alan-knowledge-base/hobbies/: cooking.md
week5/alan-knowledge-base/relationships/: father.md  mother.md
week5/alan-knowledge-base/website-scraping/: alanjponte.com-website.md
week6/community-contributions/: dataset_handler.py
