[tool.poetry]
name = "translate"
version = "0.1.0"
description = "LLM Translation tools"
authors = ["Alan Ponte <alanjponte@gmail.com>"]

[tool.poetry.dependencies]
# Code formatting
black = "^25.1.0"
python = ">=3.11,<3.14"
pydantic = "^2.10.6"
python-json-logger = ">=3.2.1,<4.0.0"
psutil = "^7.0.0"
openai = "^1.95.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pylint = "^3.3.4"
mypy = "^1.15.0"
boto3 = "^1.37.4"
packaging = "^24.2"
pyyaml = "^6.0.2"
autopep8 = "^1.5.7"
# Code formatting
black = "^25.1.0"
ipython = "9.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^3.0.0"
pytest-mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple"
priority = "primary"

#[[tool.poetry.source]]
#name = "custom repo"
#url = "repo-url"
#priority = "explicit"
